🤨 Fixed styles on mobile (width)

--- a/src/containers/App/BannerHome/_bannerHome.scss
+++ b/src/containers/App/BannerHome/_bannerHome.scss
@@ -37,10 +37,8 @@
 		background-color: #00A2E9;
 	}
 	.banner--telegramMac {
-		width: 100%;
+		max-width: 100%;
 		margin: 10px auto;
 		margin-top: 60px;
-		// box-shadow: 2px -2px 1px grey;
-		// opacity: 0.1;
 	}
 }
